# pr-guardian

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .speclint.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  README.md  alembic.ini  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.claude/commands/: commit.md  debug-failing-ci.md  new-agent.md  release.md  review.md  smoke.md  yolo.md
.clawpatch/: config.json
.github/workflows/: ci.yml
.smoke/: deploy-1863689.md
alembic/: env.py
alembic/versions/: 001_baseline.py  001_initial_review_tables.py  002_add_pipeline_log.py  002_inline_comment_finding_payloads.py  003_add_cost_tracking.py  003_readiness_candidate_synced.py  004_add_pr_url.py  004_scan_commit_range.py  005_add_trust_tier_columns.py  005_widen_scan_finding_text_fields.py  006_widen_finding_category.py  006_widen_scan_agent_name.py  007_add_finding_dismissals.py  007_review_diff_identity_hash.py  008_add_admins_and_api_keys.py  009_add_verdict_explanation.py  010_add_inline_comments.py  011_add_github_pats.py  011_add_pr_dashboard.py  012_github_pats_single_default_constraint.py  013_add_pr_dashboard.py  014_add_scan_issues.py  015_add_review_pat_name.py  015_pr_dashboard_enhancements.py  016_add_review_pat_name.py  017_add_exclusion_rules.py  018_add_finding_lifecycle.py  019_add_profiles_connections_readiness.py  020_normalize_ado_canonical_project.py  021_add_chatops_commands.py  022_add_github_app_connection_fields.py  023_add_guidance_comments_and_postback.py  024_add_require_review_check_to_repo_links.py
docs/: api.md  ci-nightly-range-review.md  cli-auth.md  cli.md  github-app-e2e.md  github-app-setup.md  human-review-design.md  pr-dashboard-company-default-ux-research.md  review-system-design-analysis.md
docs/decisions/: ADR-001-inline-comment-mode-tristate.md  ADR-002-sticky-trigger-split.md  ADR-003-finding-lifecycle-state-machine.md  ADR-004-fix-by-inference.md  ADR-005-final-auto-approval-gate.md  ADR-006-split-verifier-agent-identity.md  ADR-007-guardian-owned-profiles-and-connections.md  ADR-008-readiness-candidates-are-durable-state-machine-records.md  ADR-009-guardian-clearance-is-separate-from-platform-approval.md  ADR-010-squashed-migration-baseline.md  ADR-011-structural-only-escalation.md  ADR-012-configuration-gated-auto-approve.md
docs/plan/: 00-overview.md  01-philosophy.md  01b-discovery.md  02-mechanical-gates.md  03-triage.md  04-ai-agents.md  05-decision-engine.md  06-multi-language.md  07-architecture.md  08-implementation.md  09-operations.md  10-assessment.md  11-external-api-and-auth.md  12-readiness-gated-reviews.md  pr-guardian-design.md  pr-guardian-overview.md  tiered-trust.md
examples/github/: guardian-nightly-range.yml  guardian-pr-thin.yml
infra/azure/: acr-deploy.sh  container-app.bicep  database.bicep  deploy.sh  keyvault.bicep  main.bicep  registry.bicep
infra/docker-compose/: .env.example  docker-compose.yml
plans/: agent-redesign.md  architecture-anchor-discovery.md  auto-approve-gates.md  browse-pr-nav.md  finding-feedback-loop.md  ona-review-patterns.md  prompt-engineering-patterns.md
prompts/architecture/: base.md
prompts/architecture_intent/: base.md
prompts/code_quality_observability/: base.md
prompts/hotspot/: base.md
prompts/human_gate/: system.md  user.md
prompts/intent/: base.md
prompts/performance/: base.md
prompts/scan_validator/: base.md
prompts/security_privacy/: base.md
prompts/test_quality/: base.md
prompts/validator/: base.md
prototypes/: capability-briefing.html  capability-narrative.html  capability-queue.html  decision-queue.html  index.html  narrative-briefing.html  review-wizard.html
scripts/: agent-serve.sh  check-commit-msg.sh  deploy-app.sh  dev_seed.py  github-app-e2e.sh  repofit-check.sh
specs/: README.md
specs/agent-redesign/: design.md  purpose.md
specs/architecture-intent-split/: design.md  purpose.md
specs/auto-approve-gates/: design.md  purpose.md
specs/github-app-devx-hardening/: design.md  purpose.md
specs/inline-pr-comments/: design.md  purpose.md
specs/readiness-gated-profiles/: design.md  purpose.md
specs/reviews-paste-help/: brief.md  contract.yaml
specs/reviews-scan-preview/: brief.md  contract.yaml
specs/ui-redesign/: design.md  purpose.md
specs/verification-mode-and-sticky-triggers/: design.md  purpose.md
src/pr_guardian/: cli.py  dev_diff_store.py  main.py
tests/: test_ado_adapter.py  test_agent_contracts.py  test_agent_quote_validation.py  test_agents_contracts.py  test_architecture_agent.py  test_architecture_anchors.py  test_archmap_artifact.py  test_auto_approve_gate.py  test_blast_radius.py  test_candidate_review_lifecycle.py  test_capabilities_endpoint.py  test_capability_clusterer.py  test_change_profile.py  test_claude_cli_provider.py  test_cli_batch_dismiss.py  test_commit_msg_hook.py  test_connection_health.py  test_connection_sync.py  test_dashboard_events_sse.py  test_dashboard_quote_status.py  test_dashboard_triage_enrichment.py  test_database_pool_config.py  test_decision.py  test_dedup.py  test_dependency_change.py  test_engine_sticky_split.py  test_event_bridge.py  test_exclusion_rules.py  test_exempt_authors.py  test_fake_llm_provider.py  test_file_roles.py  test_finalize_review.py  test_finding_lifecycle.py  test_finding_triage.py  test_fix_inference.py  test_github_adapter.py  test_github_app_auth.py  test_github_app_connection_storage.py  test_github_branch_protection.py  test_github_chatops.py  (+49 more)
tests/agents/: test_human_gate_agent.py
tests/api/: test_dashboard_gate_payload.py  test_profiles_escalation.py
tests/browser/: profiles_escalation_policy.spec.mjs  profiles_management.spec.mjs  pull_requests_page.spec.mjs  repo_review_copy.spec.mjs  review_detail_postback.spec.mjs  reviews_readiness_panel.spec.mjs  reviews_scan_preview.spec.mjs  structural_only_review.spec.mjs  test_review_detail_quote_status.py
tests/config/: test_escalation_policy.py
(+282 files in other folders)
