[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-guardian"
version = "0.1.0"
description = "Automated PR review pipeline — auto-approves low-risk PRs, escalates the rest."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "starlette>=1.0.1",  # PYSEC-2026-161 — pin transitive
    "uvicorn[standard]",
    "httpx",
    "pyyaml",
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "structlog",
    "click",
    "jinja2",
    "anthropic",
    "openai",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "aiosqlite",
    "pip-audit",
    "pre-commit",
]

[project.scripts]
pr-guardian = "pr_guardian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pr_guardian = ["config/*.yml", "dashboard/*.html", "dashboard/static/*.css", "dashboard/static/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/test_inline_comments.py" = ["E402"]  # intentional mid-file imports per section

[tool.pip-audit]
strict = true
require-hashes = false
