[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-guardian"
version = "0.1.0"
description = "Automated PR review pipeline — auto-approves low-risk PRs, escalates the rest."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "starlette>=1.0.1",  # PYSEC-2026-161 — pin transitive
    "uvicorn[standard]",
    "httpx",
    "pyyaml",
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "structlog",
    "click",
    "jinja2",
    "anthropic",
    "openai",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff==0.15.17",  # pinned: unpinned ruff made `ruff format --check` non-reproducible in CI
    "mypy",
    "aiosqlite",
    "pip-audit",
    "pre-commit",
    "import-linter",
    "build",  # `python -m build` for sdist/wheel — wired so repofit's build.clean passes
    "vulture",  # dead-code detection (see CONTRIBUTING.md)
    "types-PyYAML",  # mypy stubs for yaml
]

[project.scripts]
pr-guardian = "pr_guardian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pr_guardian = ["config/*.yml", "dashboard/*.html", "dashboard/static/*.css", "dashboard/static/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/test_inline_comments.py" = ["E402"]  # intentional mid-file imports per section

[tool.mypy]
# `mypy src` is the canonical CI invocation; `mypy .` (used by repofit's
# types.clean probe) should also type-check only src. Tests use heavy
# patching/duck-typing that doesn't pay for mypy coverage today.
files = ["src"]
exclude = ["^tests/", "^alembic/", "^scripts/", "^prototypes/"]

[tool.pip-audit]
strict = true
require-hashes = false

[tool.vulture]
# Dead-code detector. Confidence ≥ 80 trims most false positives from
# FastAPI route handlers, Pydantic models, click commands, and dataclass
# fields. Anything that gets through is genuinely unreferenced.
min_confidence = 80
paths = ["src"]
exclude = ["src/pr_guardian/dashboard/static/"]
sort_by_size = true

[tool.importlinter]
root_package = "pr_guardian"

[[tool.importlinter.contracts]]
name = "Mechanical gates must not depend on LLM layer (invariant 3)"
type = "forbidden"
source_modules = ["pr_guardian.mechanical"]
forbidden_modules = ["pr_guardian.llm"]

[[tool.importlinter.contracts]]
name = "Decision engine must stay IO-free"
type = "forbidden"
source_modules = ["pr_guardian.decision"]
forbidden_modules = [
    "pr_guardian.api",
    "pr_guardian.persistence",
    "pr_guardian.platform",
    "pr_guardian.dashboard",
]

[[tool.importlinter.contracts]]
name = "Core orchestrator must not depend on API or dashboard"
type = "forbidden"
source_modules = ["pr_guardian.core"]
forbidden_modules = [
    "pr_guardian.api",
    "pr_guardian.dashboard",
]
